--- a/style.css
+++ b/style.css
@@ -9,3 +9,29 @@ th {
     border: 2px solid gray;
     padding: 10px 30px;
 }
+
+nav {
+    text-align: center;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+}
+
+li {
+    background-color: blueviolet;
+    margin: 0 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+li a {
+    text-decoration: none;
+    color: white;
+}
+
+li:hover {
+    background-color: brown;
+    transition: 1s;
+}
